✨ Clean Up godoc comments and Swagger endpoints added
