# pkg/docs/swagger.json
@@ -17,6 +17,23 @@
     "host": "localhost:8081",
     "basePath": "/api/v0",
     "paths": {
+        "/": {
+            "get": {
+                "description": "Default root API message",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "VPN"
+                ],
+                "summary": "Default root API message",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/getConfig": {
             "get": {
                 "description": "Get the content of the configuration file",
@@ -54,6 +71,23 @@
                 ],
                 "summary": "Get the local peer ID",
                 "responses": {}
+            }
+        },
+        "/ping": {
+            "get": {
+                "description": "Ping the node locally from the UI",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "VPN"
+                ],
+                "summary": "Ping the node locally from the UI",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
             }
         }
     },
